--- a/s3d/etc.html
+++ b/s3d/etc.html
@@ -16,9 +16,9 @@
 
 <UL>
 
-  <LI> <a href=https://www.threedworld.org>
-ThreeDWorld</A>
- (Jan 2022)
+  <LI> <a href=https://aigraphics.tugraz.at>
+1st EUROGRAPHICS Workshop on Intelligent Graphics</A>
+ (Apr 2022)
   
 <LI> <a href=https://yilundu.github.io/gem/>
 Learning Signal-Agnostic Manifolds of Neural Fields</A>
