--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Redirect</title>
-    <meta http-equiv="refresh" content="5; URL="https://lvelho.impa.br'"/>
-</head>
-<body>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://lvelho.impa.br/">
+        <script type="text/javascript">
+            window.location.href = "https://lvelho.impa.br/"
+        </script>
+        <title>Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://lvelho.impa.br/'>link</a>.
+    </body>
 </html>
